# wxWidgets-CMake

./: CMakeLists.txt
App/: CMakeLists.txt  MyApp.cpp  MyApp.h  MyDialog.cpp  MyDialog.h  MyFrame.cpp  MyFrame.h  MyFrameManager.cpp  MyFrameManager.h  MyInnerFrame.cpp  MyInnerFrame.h  MyLogPanel.cpp  MyLogPanel.h  MyNotebook.cpp  MyNotebook.h  MyTimebar.cpp  MyTimebar.h  MyWindow.cpp  MyWindow.h
Libraries/: CMakeLists.txt
Libraries/wxWidgets/: Readme.txt
