CMAKE_MINIMUM_REQUIRED(VERSION 3.8.2)
 PROJECT(App)

 FILE(GLOB SRC_FILES "*.cpp")

 if(WIN32)
	ADD_EXECUTABLE(${PROJECT_NAME} WIN32 ${SRC_FILES})
 else()
	ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
 endif()

 TARGET_LINK_LIBRARIES(${PROJECT_NAME} Libraries::wx::net Libraries::wx::core Libraries::wx::base)

 SET(CMAKE_CXX_STANDARD 14)
 SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 SET(CMAKE_CXX_EXTENSIONS OFF)
